[package]
name = "bh-diver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
eframe = "0.21.3"
egui = "0.21.0"
epi = "0.17.0"
image = "0.24.6"
noise = "0.8.2"
num-traits = "0.2.15"
quadrature = "0.1.2"
rayon = "1.7.0"
